[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/sprites_17/cristais.png" type="Texture" id=1]
[ext_resource path="res://Scripts/cristal.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/get_crystal.wav" type="AudioStream" id=3]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0380952, 0.227273 ), 0.0, 0.0, 0, 0, Vector2( 0.861905, 0.690909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.0223464, 0.296089, 0.994413 )
colors = PoolColorArray( 0.956863, 0.937255, 0.462745, 0.709804, 0.910156, 0.899935, 0.853271, 1, 0.968627, 0.67451, 0.364706, 0.517647 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 2.0

[node name="cristal" type="Node2D"]
position = Vector2( 73, 87 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="trail" type="Line2D" parent="."]
material = SubResource( 4 )
width_curve = SubResource( 2 )
default_color = Color( 0.937255, 1, 0.4, 1 )
gradient = SubResource( 3 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="sprite" type="Sprite" parent="."]
light_mask = 8
position = Vector2( 1, -1 )
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="area" type="Area2D" parent="."]
z_index = 1
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2( 1, -2 )
shape = SubResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="get_crystal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -14.0
attenuation = 6.06286

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
